avalanche_out.txt
   Compiling rand_triplemix v0.2.0 (C:\Users\cryoc\RustroverProjects\TripleMixPrng)
error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:888:41
    |
888 | ...                   let x = core2.pcg_state_lo;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
888 -                                 let x = core2.pcg_state_lo;
888 +                                 let x = core.pcg_state_lo;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:891:33
    |
891 | ...                   core2.pcg_state_lo = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
891 -                                 core2.pcg_state_lo = Simd64::from_array(arr);
891 +                                 core.pcg_state_lo = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:894:41
    |
894 | ...                   let x = core2.pcg_state_hi;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
894 -                                 let x = core2.pcg_state_hi;
894 +                                 let x = core.pcg_state_hi;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:897:33
    |
897 | ...                   core2.pcg_state_hi = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
897 -                                 core2.pcg_state_hi = Simd64::from_array(arr);
897 +                                 core.pcg_state_hi = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:900:41
    |
900 | ...                   let x = core2.pcg_inc_lo;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
900 -                                 let x = core2.pcg_inc_lo;
900 +                                 let x = core.pcg_inc_lo;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:903:33
    |
903 | ...                   core2.pcg_inc_lo = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
903 -                                 core2.pcg_inc_lo = Simd64::from_array(arr);
903 +                                 core.pcg_inc_lo = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:906:41
    |
906 | ...                   let x = core2.pcg_inc_hi;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
906 -                                 let x = core2.pcg_inc_hi;
906 +                                 let x = core.pcg_inc_hi;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:909:33
    |
909 | ...                   core2.pcg_inc_hi = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
909 -                                 core2.pcg_inc_hi = Simd64::from_array(arr);
909 +                                 core.pcg_inc_hi = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:912:41
    |
912 | ...                   let x = core2.tm0;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
912 -                                 let x = core2.tm0;
912 +                                 let x = core.tm0;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:915:33
    |
915 | ...                   core2.tm0 = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
915 -                                 core2.tm0 = Simd64::from_array(arr);
915 +                                 core.tm0 = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:918:41
    |
918 | ...                   let x = core2.tm1;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
918 -                                 let x = core2.tm1;
918 +                                 let x = core.tm1;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:921:33
    |
921 | ...                   core2.tm1 = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
921 -                                 core2.tm1 = Simd64::from_array(arr);
921 +                                 core.tm1 = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:924:41
    |
924 | ...                   let x = core2.mwc_state;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
924 -                                 let x = core2.mwc_state;
924 +                                 let x = core.mwc_state;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:927:33
    |
927 | ...                   core2.mwc_state = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
927 -                                 core2.mwc_state = Simd64::from_array(arr);
927 +                                 core.mwc_state = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:930:41
    |
930 | ...                   let x = core2.mwc_carry;
    |                               ^^^^^
    |
help: a local variable with a similar name exists
    |
930 -                                 let x = core2.mwc_carry;
930 +                                 let x = core.mwc_carry;
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:933:33
    |
933 | ...                   core2.mwc_carry = Simd64::from_array(arr);
    |                       ^^^^^
    |
help: a local variable with a similar name exists
    |
933 -                                 core2.mwc_carry = Simd64::from_array(arr);
933 +                                 core.mwc_carry = Simd64::from_array(arr);
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:937:29
    |
937 |                         if !core2.is_valid() {
    |                             ^^^^^
    |
help: a local variable with a similar name exists
    |
937 -                         if !core2.is_valid() {
937 +                         if !core.is_valid() {
    |

error[E0425]: cannot find value `core2` in this scope
   --> src\generate.rs:941:25
    |
941 |                         core2.fill_blocks(cast_slice_mut(&mut output2));
    |                         ^^^^^
    |
help: a local variable with a similar name exists
    |
941 -                         core2.fill_blocks(cast_slice_mut(&mut output2));
941 +                         core.fill_blocks(cast_slice_mut(&mut output2));
    |

For more information about this error, try `rustc --explain E0425`.
error: could not compile `rand_triplemix` (lib test) due to 18 previous errors
